<resources>
    <string name="app_name" translatable="false">Shopping App</string>
    <string name="book_deleted" translatable="false">Book deleted</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="signup_text">Sign up</string>
    <string name="login_text">Login</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update_hint">Update</string>
    <string name="confirm">Confirm</string>
    <string name="forget_password_text">Forget password?</string>
    <string name="reset_password_text">Reset password</string>
    <string name="login_string">Already have an account? Login <b>here</b>.</string>
    <string name="verify_email">Verify email</string>
    <string name="sample_email" translatable="false">email@email.com</string>

    <string name="username_required">Username is required!</string>
    <string name="username_error">Username error!</string>
    <string name="email_required">Email is required!</string>
    <string name="email_incorrect">This email is incorrect!</string>
    <string name="email_updated">Email updated successfully! Please confirm it and login again.</string>
    <string name="password_updated">Password updated successfully! Please login again.</string>
    <string name="password_required">Password is required!</string>
    <string name="password_too_short">Password is too short! It must contain at least 8 characters.</string>
    <string name="change_password">Change password</string>

    <string name="register_success">User registered successfully!</string>
    <string name="register_error">A problem with user registration occurred!</string>
    <string name="email_confirmation">Please confirm your email.</string>
    <string name="email_confirmation_error">A problem with email confirmation occurred!</string>
    <string name="login_error">A problem with login occurred!</string>

    <string name="email_reset_confirmation">Check your email and follow the instructions.</string>
    <string name="email_reset_error">A problem with password reset occurred!</string>

    <string name="biometrics_title">Biometric authentication</string>
    <string name="biometrics_description">Use biometrics to authenticate.</string>
    <string name="no_biometrics">You do not have set any biometric authorization!</string>
    <string name="no_biometric_hardware">There is no suitable hardware to handle the biometric authorization.</string>
    <string name="biometric_hardware_unavailable">The biometric hardware is unavailable! Please check if it does work properly.</string>
    <string name="authentication_failed">Authentication failed!</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_saved_shops">Saved shops</string>
    <string name="menu_search" translatable="false">Search product</string>
    <string name="menu_more">More</string>

    <string name="settings_header">Settings</string>
    <string name="notifications_header">Notifications history</string>
    <string name="help_header">Help</string>
    <string name="info_header" translatable="false">Info</string>
    <string name="notification_settings">Show notifications</string>
    <string name="logout_header">Logout</string>
    <string name="logged_out_text">Logged out successfully!</string>
    <string name="app_version" translatable="false"><b>App version:</b> alpha 0.5</string>

    <string name="theme_change">Select app theme</string>
    <string name="edit_username">Edit username</string>
    <string name="username_updated">Username is updated!</string>
    <string name="edit_username_hint">New username</string>

    <string name="location_permission_title">Location permission</string>
    <string name="location_permission_message">requires location permission.</string>
    <string name="positive_button_ok" translatable="false">Ok</string>
    <string name="location_permission_denied">Location access denied. You can change it in your phone settings.</string>
    <string name="location_sensor_enabled">Location sensor is now enabled.</string>
    <string name="location_sensor_disabled">Location sensor is disabled. Enable for the best experience with this app.</string>
    <string name="location_change_unavailable">Location change is unavailable. Please do it manually in your phone settings.</string>

    <string name="search_place_hint">Search place</string>
    <string name="current_location">Current location</string>
    <string name="info_dialog_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum. </string>
    <string name="app_info" translatable="false">App info</string>

    <string name="default_notification_channel_id" translatable="false">GENERAL</string>

    <string name="notification_title" translatable="false">Notification title</string>
    <string name="notification_body" translatable="false">Notification body</string>
    <string name="notification_permission_denied">Notification permission denied. You can change it in your phone settings.</string>
    <string name="notification_permission_info">Without notification permission you will not see push notifications.</string>

    <string name="authentication">Authentication</string>
    <string name="password_change">Password change</string>
    <string name="email_change">Email change</string>
    <string name="email_change_input">New email</string>
    <string name="password_change_input">New password</string>

    <string name="theme_select">Select theme</string>

<!--    <string name="API_KEY" translatable="false">AIzaSyCl1yGPZ3mpxxxxxxxAz2R-t7zcWVzrHUL9k</string>-->
    <string name="system_preferences_theme">System preferences</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>

    <string name="error">Error: </string>
    <string name="place_saved">Place saved!</string>
    <string name="place_removed">Place removed!</string>
    <string name="undo_action">Undo</string>
    <string name="yes_answer">Yes</string>
    <string name="no_answer">No</string>

    <string name="remove_place_title">Remove place</string>
    <string name="remove_place_question">Are you sure you want to remove this place?</string>
    <string name="no_places">There are no places!</string>
    <string name="or">or</string>

    <string name="product_quantity">Quantity</string>
    <string name="product_description">Short description</string>
    <string name="quantity_required">Quantity is required!</string>
    <string name="description_required">Description is required!</string>
    <string name="edit_product_toolbar_name">Edit product</string>
    <string name="product_name">Product name</string>
    <string name="product_saved">Product saved!</string>
    <string name="product_edited">Product edited!</string>
    <string name="product_removed">Product removed!</string>
    <string name="add_product_toolbar_name">Add product</string>
</resources>