<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="bottom">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="45dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:alpha="1"
                android:backgroundTint="?attr/colorOnPrimary"
                android:drawableStart="@drawable/ic_outline_email_24"
                android:drawablePadding="10dp"
                android:drawableTint="?attr/colorOnPrimary"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHint="?attr/colorOnPrimary" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:alpha="1"
                android:backgroundTint="?attr/colorOnPrimary"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="10dp"
                android:drawableTint="?attr/colorOnPrimary"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHint="?attr/colorOnPrimary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forget_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:gravity="end"
                android:text="@string/forget_password_text"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:padding="15dp"
                android:text="@string/login_text"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:elevation="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp"
                    android:background="?attr/colorOnPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/or"
                    android:textColor="?attr/colorOnPrimary" />

                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp"
                    android:background="?attr/colorOnPrimary" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="?attr/colorAccent"
                android:padding="15dp"
                android:text="@string/signup_text"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:elevation="10dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>