<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:src="@drawable/register_background"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:tint="?attr/colorOnPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:layout_weight="0.8"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="45dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="?attr/colorOnPrimary"
                android:drawableStart="@drawable/ic_outline_person_24"
                android:drawablePadding="10dp"
                android:drawableTint="?attr/colorOnPrimary"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="?attr/colorOnPrimary"
                android:textColor="?attr/colorOnPrimary"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="?attr/colorOnPrimary"
                android:drawableStart="@drawable/ic_outline_email_24"
                android:drawablePadding="10dp"
                android:drawableTint="?attr/colorOnPrimary"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="?attr/colorOnPrimary"
                android:textColor="?attr/colorOnPrimary"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="?attr/colorOnPrimary"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="10dp"
                android:drawableTint="?attr/colorOnPrimary"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="?attr/colorOnPrimary"
                android:textColor="?attr/colorOnPrimary"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:backgroundTint="?attr/colorAccent"
                android:text="@string/signup_text"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:elevation="10dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/login_string"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>