<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/set_theme_activity_view"
    tools:context=".activity.SetThemeActivity">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@color/orange_secondary_dark"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="?actionBarSize"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:tint="?attr/colorOnPrimary" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:layout_anchor="@id/background"
        app:layout_anchorGravity="center_horizontal|bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/theme_select"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/light_theme"
                    android:padding="5dp"
                    android:drawableStart="@drawable/ic_baseline_light_mode_24"
                    android:drawableTint="@color/amber_primary_light"
                    android:drawablePadding="5dp"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_theme"
                    android:padding="5dp"
                    android:drawableLeft="@drawable/ic_baseline_dark_mode_24"
                    android:drawableTint="@color/amber_primary_dark"
                    android:drawablePadding="5dp"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_system"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system_preferences_theme"
                    android:padding="5dp"
                    android:drawableLeft="@drawable/ic_baseline_app_settings_alt_24"
                    android:drawableTint="@color/orange_secondary_dark"
                    android:drawablePadding="5dp"/>

            </RadioGroup>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>