<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:background="?attr/colorPrimaryVariant">

        <ImageView
            android:id="@+id/product_item_photo"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/loading_screen_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/product_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/product_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/product_quantity"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:drawableStart="@drawable/ic_baseline_numbers_24"
                android:drawablePadding="6dp"
                android:drawableTint="@color/black"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/product_item_description"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/product_description"
                android:maxLines="3"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>