<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fav_shops_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?actionBarSize"
    android:orientation="vertical"
    tools:context=".fragment.FavouriteShopsFragment">

    <io.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/add_edit_product_toolbar"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:elevation="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_arc_height="20dp"
        app:shape_arc_position="bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryDark">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="?attr/colorOnPrimary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/add_edit_product_toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="54dp"
                android:text="@string/add_product_toolbar_name"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </io.github.florent37.shapeofview.shapes.ArcView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_edit_product_toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/add_edit_product_photo_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/add_edit_product_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_image_24"
                android:background="?attr/colorOnPrimary"/>

            <ImageView
                android:id="@+id/add_edit_product_photo_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_anchor="@id/add_edit_product_photo"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="70dp"
                app:tint="@color/amber_primary_dark" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_edit_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="5dp"
            android:padding="10dp"
            android:layout_below="@id/add_edit_product_photo_layout"
            android:hint="@string/product_name"
            android:drawableStart="@drawable/ic_baseline_text_fields_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/gray"
            android:inputType="textCapSentences" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_edit_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_below="@id/add_edit_product_name"
            android:drawableStart="@drawable/ic_baseline_numbers_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/gray"
            android:hint="@string/product_quantity"
            android:inputType="number" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_edit_product_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/add_edit_product_quantity"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_description_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/gray"
            android:hint="@string/product_description"
            android:inputType="textCapSentences|textMultiLine"
            android:singleLine="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_edit_product_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_edit_product_description"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:minWidth="100dp"
            app:cornerRadius="6dp"
            android:text="@string/save" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
